2008-01-03  Stefan Monnier  <monnier@iro.umontreal.ca>

	* keyboard.c (read_key_sequence): Fix typo.

2008-01-03  Michael Albinus  <michael.albinus@gmx.de>

	* dbusbind.c (all): Replace XCAR by CAR_SAFE and XCDR by CDR_SAFE.
	(xd_signature, xd_append_arg): Handle element type detection for
	empty arrays.
	(Fdbus_call_method, Fdbus_send_signal): Undo type casting for
	SDATA () calls; this must be solved more general.
	(Fdbus_register_signal): Use SBYTES instead of strlen.

2008-01-03  Magnus Henoch  <magnus@zemdatav>

	* dbusbind.c (xd_append_arg): Use unsigned char instead of
	unsigned int for byte values (necessary for big-endian platform).
	(Fdbus_call_method): Handle the case of no returned arguments.

2007-12-31  Tom Tromey <tromey@redhat.com>  (tiny change)

	* dbusbind.c (xd_read_message): Use non-static input_event struct.

2007-12-31  Magnus Henoch  <mange@freemail.hu>

	* dbusbind.c (xd_signature): Signature of variant is just "v".

2007-12-30  Michael Albinus  <michael.albinus@gmx.de>

	* dbusbind.c: Fix several errors and compiler warnings.
	Reported by Tom Tromey <tromey@redhat.com>
	(XD_ERROR, XD_DEBUG_MESSAGE)
	(XD_DEBUG_VALID_LISP_OBJECT_P): Wrap code with "do ... while (0)".
	(xd_append_arg): Part for basic D-Bus types rewitten.
	(xd_retrieve_arg): Split implementation of DBUS_TYPE_BYTE and
	DBUS_TYPE_(U)INT16.  Don't call XD_DEBUG_MESSAGE with "%f" if not
	appropriate.
	(xd_read_message): Return Qnil.  Don't signal an error; it is not
	useful during event reading.
	(Fdbus_register_signal): Signal an error if the check for
	FUNCTIONP fails.
	(Fdbus_register_method): New function.  The implementation is not
	complete, the call of the function signals an error therefore.
	(Fdbus_unregister_object): New function, renamed from
	Fdbus_unregister_signal.  The initial check signals an error, if
	the object is not well formed.

2007-12-30  Richard Stallman  <rms@gnu.org>

	* textprop.c (get_char_property_and_overlay):